[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/player.png" type="Texture" id=1]
[ext_resource path="res://sprites/player_kick_ready.png" type="Texture" id=2]
[ext_resource path="res://scripts/Actors/Player.gd" type="Script" id=3]
[ext_resource path="res://scripts/Actors/PlayerBody.gd" type="Script" id=4]
[ext_resource path="res://audio/Fight-Kicks-A3-www.fesliyanstudios.com.mp3" type="AudioStream" id=5]
[ext_resource path="res://scripts/PlayerInput.gd" type="Script" id=6]
[ext_resource path="res://scripts/PlayerAnimation.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "missKicked",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "kickReady",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 31 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 32 )

[sub_resource type="CircleShape2D" id=7]
radius = 160.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 28, 28 )

[node name="Player" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource( 6 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "missKicked"
script = ExtResource( 7 )

[node name="PlayerBody" type="KinematicBody2D" parent="."]
collision_mask = 10
script = ExtResource( 4 )

[node name="PlayerCollision" type="CollisionShape2D" parent="PlayerBody"]
position = Vector2( 0, 1 )
shape = SubResource( 5 )

[node name="RightArea" type="Area2D" parent="."]
position = Vector2( 33, 0 )
collision_layer = 0
collision_mask = 2

[node name="RightCollision" type="CollisionShape2D" parent="RightArea"]
shape = SubResource( 3 )

[node name="LeftArea" type="Area2D" parent="."]
position = Vector2( -33, 0 )
collision_layer = 0
collision_mask = 2

[node name="LeftCollision" type="CollisionShape2D" parent="LeftArea"]
shape = SubResource( 3 )

[node name="KickArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="KickCollision" type="CollisionShape2D" parent="KickArea"]
position = Vector2( 0, 32 )
shape = SubResource( 7 )

[node name="KickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Effects"

[node name="HitLabels" type="Node" parent="."]

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="HitCollision" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 6 )

[connection signal="body_entered" from="RightArea" to="." method="_on_RightArea_body_entered"]
[connection signal="body_exited" from="RightArea" to="." method="_on_RightArea_body_exited"]
[connection signal="body_entered" from="LeftArea" to="." method="_on_LeftArea_body_entered"]
[connection signal="body_exited" from="LeftArea" to="." method="_on_LeftArea_body_exited"]
[connection signal="area_entered" from="KickArea" to="." method="_on_KickArea_area_entered"]
[connection signal="area_exited" from="KickArea" to="." method="_on_KickArea_area_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_HitArea_body_exited"]
